# ros2-footswitch

./: 19-footswitch.rules  CMakeLists.txt  Makefile  README.md  package.xml
scripts/: footswitch.py
src/: footswitch.c  test.cpp
